# homeassistant-dashboard-server

./: .bumpversion.cfg  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.rpi  Makefile  README.md  app.py  config.py  config.yml  homeassistant-inkplate-dashboard.ino  pyproject.toml  requirements.dev.txt  requirements.txt  shotter.py
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  combine-prs.yml  pipeline.yml  push.yml  tests.yaml
data/fallback/: index.html
dev/homeassistant/: docker-compose.yml
dev/homeassistant/config/: auth_provider.json  config_entries.json  core_config.json  device_registry.json  entity_registry.json  homeassistant.yml
dev/sample_configuration/: components.yaml  configuration.yaml
frontend/: .gitignore  .prettierrc.json  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/fonts/: materialdesignicons-webfont.eot:Zone.Identifier  materialdesignicons-webfont.ttf:Zone.Identifier  materialdesignicons-webfont.woff2:Zone.Identifier  materialdesignicons-webfont.woff:Zone.Identifier
frontend/src/: App.vue  i18n.js  main.js
frontend/src/assets/: main.css
frontend/src/components/: BaseGraph.vue  ComponentLoader.vue  ErrorState.vue  LoadingState.vue
frontend/src/components/base/: GraphBase.vue
frontend/src/composables/: calendar.js  card.js  chart.js  entity.js  fetch.js
frontend/src/config/: i18n.js
frontend/src/router/: index.js
frontend/src/stores/: dashboard.js  homeassistant.js  main.js  server.js
frontend/src/util/: card.js  chart.js  errors.js  ha.weather.js  layout.js
frontend/src/views/: DashboardView.vue  ErrorView.vue  PageNotFoundView.vue
hashotter/: config.py  server.py  tasks.py
inkplate/: inkplate-esphome.yaml  inkplate.ino
server/: __main__.py  app.py  capture.py  config.py  configuration.py  dashboard.py  dependencies.py  logger.py  main.py  models.py  proxy.py  requirements.dev.txt  requirements.txt  screenshot.py  server.py  socket.py  util.py
server/assets/: jetbrains-mono.ttf:Zone.Identifier
server/assets/templates/: base.html
server/models/: capture.py  config.py  homeassistant.py  server.py  view.py
server/routers/: api.py  proxy.py  static.py
server/templates/: base.html  entity.html
server/templates/partials/: entity_summary.html
(+28 files in other folders)
