[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homeassistant-dashboard-server"
version = "0.5.0"
description = "A dashboard server for Home Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "homeassistant-api~=4.2.1",
    "jinja2>=3.1.6",
    "loguru~=0.7.2",
    "pillow>=10.3.0",
    "playwright>=1.41.0",
    "pydantic~=2.7.4",
    "pydantic-settings~=2.3.3",
    "python-dateutil~=2.8.2",
    "pytz>=2024.1",
    "pyyaml>=6.0.1",
    "pyyaml-include~=1.3.2",
    "requests>=2.32.5",
    "uvicorn[standard]~=0.30.1",
    "websockets~=12.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "bump2version~=1.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.black]
target-version = ['py311']
line-length = 80
